--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootswatch": "^4.1.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.2.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
