--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "7.2.6",
     "@angular/platform-browser-dynamic": "7.2.6",
     "@angular/router": "7.2.6",
+    "@auth0/angular-jwt": "^2.1.0",
     "angular-notifier": "^4.1.1",
     "bootstrap": "4.0.0-beta.2",
     "bootswatch": "^4.1.1",
