--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "bootstrap": "4.0.0-beta.2",
     "bootswatch": "^4.1.1",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.2.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
@@ -37,6 +36,7 @@
     "@angular/cli": "7.3.3",
     "@angular/compiler-cli": "7.2.6",
     "@angular/language-service": "7.2.6",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
