--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "4.0.0-beta.2",
     "bootswatch": "^4.1.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-gallery": "^5.9.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
