--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootswatch": "^4.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "mydatepicker": "^2.6.6",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.2.0",
     "ngx-gallery": "^5.9.1",
