--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "mydatepicker": "^2.6.6",
+    "ng-select": "^1.0.2",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^4.1.1",
     "ngx-gallery": "^5.9.1",
